# DMWG-couplingScan-code

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: pythonpackage.yml
couplingscan/: coupling_limiter.py  limit_1d.py  limitparsers.py  rescaler.py  scan.py  simple_functions_pybind.py
package/: rescaler.py  scan.py  simple_functions_pybind.py
src/: lhapdf_integrands.cpp  lhapdf_integrands.hpp  main.cpp
test/: common_functions.py  dijet_test.py  monophoton_test.py  plot_and_convert_paper_limits.py  simple_test.py
test/dijet_hepdata/: a1_contour_1.txt  approximate_theorycurve.txt  hepdata_gqplot_cms36ifb.json  hepdata_gqplot_withDM_cms36ifb.json  provenance.txt  v1_contour_2.txt
test/dilepton_data/: approximate_theorycurve.txt  provenance.txt
test/monophoton_hepdata/: hepdata_A1_obscontour.json  hepdata_A2_obscontour.json  hepdata_AV_gq0p25_gchi1p0.json
tests/: dijet_test.py  dilepton_test.py  monophoton_test.py
tests/dijet_hepdata/: a1_contour_2.txt  hepdata_crosssectionlimit_cms36ifb.json  v1_contour_1.txt
tests/dilepton_data/: hepdata_observed_xseclimits_atlas139ifb.json
tests/monophoton_hepdata/: hepdata_V1_obscontour.json  hepdata_V2_obscontour.json  provenance.txt
ugly_scripts/: hepdata_AV_gq0p25_gchi1p0.json  plot_and_convert_paper_limits.py  setup.py  setup.sh
ugly_scripts/core_code/: createPlots.py  exclCalc.py  monojet_functions.py  monox_functions.cpp  monox_functions.pxd  monox_functions.pyx  setup.monox_functions.py
